--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0; 
     font-family: 'Alegreya Sans', sans-serif;
-    background-image: url(images/BG1.jpeg);
+    background-image: url(images/BG.jpg);
     background-repeat: no-repeat;
     background-size: auto 1000px; 
 }
