--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     margin: 0; 
     font-family: 'Alegreya Sans', sans-serif;
-    background-image: url(images/BG.jpg);
+    background-image: url("images/BG.jpeg");
     background-repeat: no-repeat;
     background-size: auto 1000px; 
     background-attachment: fixed;
+    background-color: grey;
 }
 
 header {
@@ -53,37 +54,46 @@ nav ul li a:hover {
 
 #name h1 {
     padding-top: 20px; 
+    display: none; 
 }
 
 #name h2 {
     font-weight: 300; 
+    display: none; 
 }
 
 #name img { 
     width: 250px;
     height: 250px;
     border-radius: 50%;
+    display: none; 
 }
 
 #aboutMe {
-    background-color: #8B8378;
+    background: rgba(139, 131, 120, 0.7);
     color: white;
     text-align: center;
     margin: 50px 200px;
-    padding: 20px;
+    padding: 20px 50px;
+    background-attachment: fixed; 
+    overflow: scroll; 
+    display: none;
 }
 
 #aboutMe h3 {
     font-size: 50px;
     margin: 0;
     padding: 0;
+    display: none;
 }
 
 #aboutMe h4 {
     font-size: 20px;
+    display: none;
 }
 
 #aboutMe p { 
     font-size: 16px;
     font-weight: 300;
+    display: none;
 }
