--- a/Personal Website/style.css
+++ b/Personal Website/style.css
@@ -15,31 +15,45 @@ header {
     font-size: 20px;
 }
 
-nav {
-    width: 100%;
-    position: fixed; 
+/* NAVIGATION BAR */ 
+
+#navbar {
+    text-align: center;  
+    margin: auto;
+    width: 100%; 
+    padding: 5px; 
+    /*position: fixed;*/
 }
 
-nav ul {
+#nav {
+    margin: auto; 
+    padding: 15px; 
+    width: 600px;
+    background-color: rgba(45, 25, 25, 0.5);
+    border-radius: 10px; 
+    text-align: center;  
+}
+
+#nav ul {
     margin: 0;
-    padding-left: 20px; 
+    padding: 0;
     text-align: center; 
 }
 
-nav ul li{
-    display: inline-block;
+#nav ul li{
     list-style-type: none;
+    display: inline-block;
     padding: 5px 25px;
     margin: 0;
 }
 
-nav ul li a {
+#nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: 300; 
 }
 
-nav ul li a:hover {
+#nav ul li a:hover {
     border: 1px solid; 
     padding: 10px; 
     margin: -11px;
@@ -70,14 +84,23 @@ nav ul li a:hover {
 }
 
 #aboutMe {
-    background: rgba(139, 131, 120, 0.7);
-    color: white;
     text-align: center;
     margin: 50px 200px;
-    padding: 20px 50px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.7); 
+    border-radius: 10px;
+    display: none;
+}
+
+#aboutMe div {
+    background: rgba(54, 25, 25, .7);
+    color: white;
+    text-align: center;
     background-attachment: fixed; 
     overflow: scroll; 
     display: none;
+    border-radius: 10px; 
+    padding: 20px 50px; 
 }
 
 #aboutMe h3 {
@@ -98,6 +121,8 @@ nav ul li a:hover {
     font-weight: 300;
     display: none;
 }
+
+/* CONTACT PAGE */ 
 
 #contactInfo {
     text-align: center;
@@ -124,13 +149,14 @@ nav ul li a:hover {
 
 #contactInfo img {
     display: none; 
-    margin: 20px auto;
+    margin: 25px auto;
     width: auto; 
     height: 270px;
     border-radius: 25px;
 }
 
 #contactInfo ul img { 
+    display: none;
     height: 50px; 
     width: auto;
     border-radius: 0;
@@ -139,3 +165,47 @@ nav ul li a:hover {
 #contactInfo ul img:hover {
      opacity: 0.2; 
 }
+
+/* SKILLS PAGE */ 
+
+#skills {
+    background-attachment: fixed; 
+    overflow: scroll;
+}
+
+.grid {
+    display: flex;
+    flex-flow: row wrap; 
+    justify-content: center;
+    width: 600px; 
+    margin: auto;
+    padding: 20px 50px;
+}
+
+.cell { 
+   width: 150px;
+   height: 100px; 
+   background-color: rgba(54, 25, 25, .5);
+   color: white;
+   text-align: center;
+   position: relative;
+}
+
+.cell h4{
+    margin: 5px; 
+    position: absolute;
+    width: 100%; 
+    bottom: 30px;
+    font-size: 30px; 
+}
+
+.cell img {
+    width: 150px;
+    height: 100px;
+    border-radius: 10px;
+    filter: blur(1px);
+}
+
+
+
+
